feat: add a set of optonal fields and implement coercion rules for them

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,7 @@ raw_expr = []
 [dependencies.postgres]
 optional = true
 git = "https://github.com/sfackler/rust-postgres.git"
+
+[dependencies.uuid]
+optional = true
+git = "https://github.com/rust-lang/uuid.git"
