chore: fix deps to build Dt

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,8 @@ raw_expr = []
 
 [dependencies.postgres]
 optional = true
+features = ["uuid_type"]
 git = "https://github.com/sfackler/rust-postgres.git"
 
 [dependencies.uuid]
-optional = true
 git = "https://github.com/rust-lang/uuid.git"
