--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ git = "https://github.com/sfackler/rust-postgres.git"
 
 [dependencies.uuid]
 git = "https://github.com/rust-lang/uuid.git"
+
+[dependencies.time]
+git = "https://github.com/rust-lang/time"
