--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,10 @@ name = "tests"
 default = ["postgres"]
 
 [dependencies]
-uuid = "0.5" # Same as Postgres
-time = "*"
-rustc-serialize = "*"
+# All of the below are the same as Postgres for compatibility reasons
+uuid = "0.5"
+time = "0.1.14"
+rustc-serialize = "0.3"
 
 [dependencies.postgres]
 version = ">= 0.12.0" # for 'with-' features
