--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,10 @@ default = ["postgres"]
 [dependencies]
 # All of the below are the same as Postgres for compatibility reasons
 uuid = "0.5"
-time = "0.1.14"
+chrono = "0.4"
 serde_json = "1.0"
 
 [dependencies.postgres]
 version = ">= 0.12.0" # for 'with-' features
-features = ["with-uuid", "with-serde_json", "with-time"]
+features = ["with-uuid", "with-serde_json", "with-chrono"]
 optional = true
