--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "deuterium"
-version = "0.4.0"
+version = "0.5.0"
 authors = ["Stanislav Panferov <fnight.m@gmail.com>"]
 license = "MIT"
 description = "Deuterium is a fancy SQL builder for Rust. It's designed to provide a DSL to easily build SQL queries in safe and *typed* way."
@@ -20,6 +20,6 @@ chrono = "0.4"
 serde_json = "1.0"
 
 [dependencies.postgres]
-version = ">= 0.12.0" # for 'with-' features
+version = "~0.15.2" # for 'with-' features
 features = ["with-uuid", "with-serde_json", "with-chrono"]
 optional = true
